--- a/package.json
+++ b/package.json
@@ -28,11 +28,13 @@
     "@ionic-native/splash-screen": "^5.31.1",
     "@ionic-native/status-bar": "^5.31.1",
     "@ionic/angular": "^5.5.4",
+    "@vime/angular": "^5.0.27",
     "chart.js": "^2.9.4",
-    "cordova-android": "8.1.0",
     "cordova-plugin-datepicker": "^0.9.3",
     "cordova-plugin-x-socialsharing": "^6.0.3",
     "es6-promise-plugin": "^4.2.2",
+    "ng2-google-charts": "^6.1.0",
+    "ng2-pdf-viewer": "^6.4.0",
     "ngx-ellipsis": "^3.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
@@ -49,6 +51,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "cordova-android": "^9.0.0",
     "cordova-plugin-device": "^2.0.3",
     "cordova-plugin-ionic-keyboard": "^2.2.0",
     "cordova-plugin-ionic-webview": "^4.2.1",
@@ -80,9 +83,14 @@
       },
       "cordova-plugin-ionic-keyboard": {},
       "cordova-plugin-datepicker": {},
-      "cordova-plugin-x-socialsharing": {}
+      "cordova-plugin-x-socialsharing": {
+        "PHOTO_LIBRARY_ADD_USAGE_DESCRIPTION": "This app requires photo library access to function properly.",
+        "PHOTO_LIBRARY_USAGE_DESCRIPTION": "This app requires photo library access to function properly."
+      },
+      "cordova-plugin-androidx": {}
     },
     "platforms": [
+      "ios",
       "android"
     ]
   },
