--- a/package.json
+++ b/package.json
@@ -95,5 +95,12 @@
     ]
   },
   "main": "karma.conf.js",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/MohammedAliKadiwal/iStudy12.git"
+  },
+  "bugs": {
+    "url": "https://github.com/MohammedAliKadiwal/iStudy12/issues"
+  }
 }
